fix tab spacing

--- a/mkdocs-material/stylesheets/extra.css
+++ b/mkdocs-material/stylesheets/extra.css
@@ -54,7 +54,6 @@ p, h5, li{
 .md-tabs__link{
   padding-right: 10px;
   padding-left: 10px;
-  padding-bottom: 12px;
 }
 
 .md-tabs__link--active{
